@@ -39,7 +39,6 @@ S3method(Ops, ratetable)
 S3method(Summary, Surv)
 S3method(anova, coxph)
 S3method(anova, coxphlist)
-S3method(anova, coxmelist)
 S3method(anova, survreg)
 S3method(anova, survreglist)
 S3method(as.character, Surv)
