@@ -24,8 +24,14 @@ anova.coxph <- function (object, ...,  test = 'Chisq') {
         if (!all(is.coxmodel | is.coxme))
             stop("All arguments must be Cox models")
         
-        if (any(is.coxme))
-            return(anova.coxmelist(c(list(object), dotargs), test = test))
+        if (any(is.coxme)) {
+            # We need the anova.coxmelist function from coxme
+            # If coxme is not loaded the line below returns NULL
+            temp <- getS3method("anova", "coxmelist", optional=TRUE)
+            if (is.null(temp)) 
+                stop("a coxme model was found and library coxme is not loaded")
+            else return(temp(c(list(object), dotargs), test = test))
+        }
         else return(anova.coxphlist(c(list(object), dotargs), test = test))
     }
 
